--- a/spring_style.css
+++ b/spring_style.css
@@ -16,12 +16,7 @@ hr {
 #user {
   background-color: rgb(8, 58, 23);
 }
-table,
-th,
-tr,
-td {
-  border: 10px solid rgb(14, 80, 167);
-}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -44,4 +39,34 @@ li a {
 
 li a:hover {
   background-color: #111;
+}
+hr {
+  font-size: 15px;
+}
+table,
+th,
+td {
+  border: 1px solid black;
+}
+h1 {
+  color: rgb(0, 0, 0);
+  text-shadow: 2px 2px 4px #550606;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
